Fix 'SQL code indexes wrong field for foreign key'

BUG:292239
FIXED-IN:2.26.90 (KDE Applications 18.11.90)